<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pizza"
            android:title="@string/menu_pizza" />
        <item
            android:id="@+id/nav_combo"
            android:title="@string/menu_combo" />
        <item
            android:id="@+id/nav_pasta"
            android:title="@string/menu_pasta" />
        <item
            android:id="@+id/nav_burgers_and_rolls"
            android:title="@string/menu_burgers_and_rolls" />
        <item
            android:id="@+id/nav_snacks"
            android:title="@string/menu_burgers_and_rolls" />
        <item
            android:id="@+id/nav_desserts"
            android:title="@string/menu_desserts" />
        <item
            android:id="@+id/nav_drinks"
            android:title="@string/menu_drinks" />
    </group>

</menu>
