<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/pizza_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_pizza" />

    <Button
        android:id="@+id/combo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_combo" />

    <Button
        android:id="@+id/pasta_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_pasta" />

    <Button
        android:id="@+id/burgers_and_rolls_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_burgers_and_rolls" />

    <Button
        android:id="@+id/snacks_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_snacks" />

    <Button
        android:id="@+id/desserts_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_desserts" />

    <Button
        android:id="@+id/drinks_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_drinks" />

</LinearLayout>